--- a/src/main/resources/rb/Nat_fr.properties
+++ b/src/main/resources/rb/Nat_fr.properties
@@ -8,4 +8,4 @@ Proceed = Procéder à la Connexion
 Error =   Erreur
 Login =   Erreur D'Identification
 Invalid = Des informations d'identification non valides ont été saisies. Veuillez réessayer.
-MM-dd-yyyy = dd-MM-yyyy
+MM/dd/yyyy = dd-MM-yyyy
