Removed Create attributes from modifyappt

--- a/src/main/resources/rb/Nat_en.properties
+++ b/src/main/resources/rb/Nat_en.properties
@@ -8,3 +8,6 @@ Error =   Error
 Login =   Login Error
 Invalid = Invalid Credentials were entered at this time. Please try again.
 MM/dd/yyyy =  MM/dd/yyyy 
+Contact = Contact
+ID = ID
+User = User
