--- a/src/main/resources/rb/Nat_fr.properties
+++ b/src/main/resources/rb/Nat_fr.properties
@@ -9,3 +9,6 @@ Error =   Erreur
 Login =   Erreur D'Identification
 Invalid = Des informations d'identification non valides ont été saisies. Veuillez réessayer.
 MM/dd/yyyy = dd-MM-yyyy
+Contact = Contact
+ID = ID
+User = Utilisateur
