Preparing Full App Translation

--- a/src/main/resources/rb/Nat_fr.properties
+++ b/src/main/resources/rb/Nat_fr.properties
@@ -7,8 +7,54 @@ Exit = Sortir
 Proceed = Procéder à la Connexion
 Error =   Erreur
 Login =   Erreur D'Identification
+LoginForm = Formulaire de Connexion
 Invalid = Des informations d'identification non valides ont été saisies. Veuillez réessayer.
 MM/dd/yyyy = dd-MM-yyyy
 Contact = Contact
 ID = ID
 User = Utilisateur
+Appointments = Rendez-vous
+APPOINTMENTS = Rendez-vous
+APPOINTMENT = Rendez-vous
+Customers = Clients
+CUSTOMERS = Clients
+Customer = Client
+Reports = Rapports
+Back  = Retourner
+BACK = Retourner
+Appt = Appt
+Title = Le Titre
+Description = La Description
+Location = Emplacement
+Type = Le Type
+Start = Le Début
+End = La Fin
+ADD = Ajouter
+UPDATE = Réviser
+DELETE = Effacer
+All = Tout
+Month = Le Mois
+Week = La Semaine
+Name = Nom
+Address = L'adresse
+Postal = Code Postal
+Phone = Téléphone
+Division = La Division
+Countries = Des Pays
+Total = Le Total
+Months = Les Mes
+Totals = Les Totaux
+Select = sélectionner
+Full =  Ordre du jour du Contact
+Remaining = Le reste
+for = pour
+to = à
+Main = Menu Principal,Main Menu
+SELECTION = ERREUR DE SÉLECTION
+No = Aucune sélection n'a été faite pour cette opération.
+DELETION = ERREUR DE SUPPRESSION
+Existing = Les rendez-vous clients existants doivent être supprimés avant de supprimer ce client.
+OVERLAP = AVERTISSEMENT DE CHEVAUCHEMENT
+Current = La sélection actuelle entre en conflit avec les heures d'ouverture établies ou chevauche les rendez-vous existants. Veuillez réessayer.
+Upcoming = Rendez-Vous à Venir
+AppointmentNotification = Avis de Rendez-Vous
