--- a/src/main/resources/rb/Nat_en.properties
+++ b/src/main/resources/rb/Nat_en.properties
@@ -6,8 +6,54 @@ Exit = Exit
 Proceed = Proceed to Login
 Error =   Error
 Login =   Login Error
+LoginForm = Login Form
 Invalid = Invalid Credentials were entered at this time. Please try again.
 MM/dd/yyyy =  MM/dd/yyyy 
 Contact = Contact
 ID = ID
 User = User
+Appointments = Appointments
+APPOINTMENTS = APPOINTMENTS
+APPOINTMENT = APPOINTMENT
+Customers = Customers
+CUSTOMERS = CUSTOMERS
+Customer = Customer
+Reports = Reports
+Back  = Back
+BACK = BACK
+Appt = Appt
+Title = Title
+Description = Description
+Location = Location
+Type = Type
+Start = Start
+End = End
+ADD = ADD
+UPDATE = UPDATE
+DELETE = DELETE
+All = All
+Month = Month
+Week = Week
+Name = Name
+Address = Address
+Postal = Postal Code
+Phone = Phone
+Division = Division
+Countries = Countries
+Total = Total
+Months = Month
+Totals = Totals
+Select = Select
+Full =  Full Contact Agenda
+Remaining = Remaining
+for = for
+to = to
+Main = Main Menu
+SELECTION = SELECTION ERROR
+No = No selection was made for this operation.
+DELETION = DELETE ERROR
+Existing = Existing customer appointments must be deleted prior to deleting this customer.
+OVERLAP = OVERLAP WARNING
+Current = Current selection either conflicts with established business hours or overlaps existing appointments. Please Try Again.
+Upcoming = Upcoming Appointment
+AppointmentNotification = Appointment Notification
