Appt & Customer submissions update with best practices

--- a/src/main/resources/rb/Nat_fr.properties
+++ b/src/main/resources/rb/Nat_fr.properties
@@ -9,7 +9,7 @@ Error =   Erreur
 Login =   Erreur D'Identification
 LoginForm = Formulaire de Connexion
 Invalid = Des informations d'identification non valides ont été saisies. Veuillez réessayer.
-MM/dd/yyyy = dd-MM-yyyy
+MM/dd/yyyy = dd/MM/yyyy
 Contact = Contact
 ID = ID
 User = Utilisateur
@@ -46,10 +46,10 @@ Months = Les Mes
 Totals = Les Totaux
 Select = sélectionner
 Full =  Ordre du jour du Contact
-Remaining = Le reste
+Remaining = Le reste, restent
 for = pour
 to = à
-Main = Menu Principal,Main Menu
+Main = Menu Principal
 SELECTION = ERREUR DE SÉLECTION
 No = Aucune sélection n'a été faite pour cette opération.
 DELETION = ERREUR DE SUPPRESSION
@@ -58,3 +58,5 @@ OVERLAP = AVERTISSEMENT DE CHEVAUCHEMENT
 Current = La sélection actuelle entre en conflit avec les heures d'ouverture établies ou chevauche les rendez-vous existants. Veuillez réessayer.
 Upcoming = Rendez-Vous à Venir
 AppointmentNotification = Avis de Rendez-Vous
+You = Vous avez un rendez-vous à venir avec les critères suivants :
+There = Il n'y a pas de rendez-vous à venir pour le moment.
