--- a/src/main/resources/rb/Nat_fr.properties
+++ b/src/main/resources/rb/Nat_fr.properties
@@ -16,6 +16,7 @@ User = Utilisateur
 Appointments = Rendez-vous
 APPOINTMENTS = Rendez-vous
 APPOINTMENT = Rendez-vous
+Appointment = Rendez-vous
 Customers = Clients
 CUSTOMERS = Clients
 Customer = Client
@@ -60,3 +61,11 @@ Upcoming = Rendez-Vous à Venir
 AppointmentNotification = Avis de Rendez-Vous
 You = Vous avez un rendez-vous à venir avec les critères suivants :
 There = Il n'y a pas de rendez-vous à venir pour le moment.
+CurrentDay = Aujourd'hui Est
+Sunday = Dimanche
+Monday = Lundi
+Tuesday = Mardi
+Wednesday = Mercredi
+Thursday = Jeudi
+Friday = Vendredi
+Saturday = Samedi
