--- a/src/main/resources/rb/Nat_en.properties
+++ b/src/main/resources/rb/Nat_en.properties
@@ -15,10 +15,18 @@ User = User
 Appointments = Appointments
 APPOINTMENTS = APPOINTMENTS
 APPOINTMENT = APPOINTMENT
-Appointment = Appointment *
+Appointment = Appointment 
+AppointmentID = Appointment ID
+AppointmentType = Appointment Type
+APPOINTMENTID = APPOINTMENT ID# :
+ApptID = Appt.ID
+APPOINTMENT_TITLE = APPOINTMENT TITLE:
+UserID = User ID
 Customers = Customers
 CUSTOMERS = CUSTOMERS
 Customer = Customer
+CustomerID = Customer ID
+CustomerName = Customer Name
 Reports = Reports
 Back  = Back
 BACK = BACK
@@ -30,6 +38,13 @@ Type = Type
 Start = Start
 End = End
 ADD = ADD
+Add = Add
+ApptModification = Modify Appointment
+addCust = ADD CUSTOMER
+modCust = UPDATE CUSTOMER
+addAppt = ADD APPOINTMENT
+modAppt = UPDATE APPOINTMENT
+Modify = Modify
 UPDATE = UPDATE
 DELETE = DELETE
 All = All
@@ -40,12 +55,15 @@ Address = Address
 Postal = Postal Code
 Phone = Phone
 Division = Division
+DivisionID = Division ID
 Countries = Countries
+Country = Country
+State = State/Province
 Total = Total
 Months = Month
 Totals = Totals
-Select = Select
-Full =  Full Contact Agenda
+contactSelect = Select
+Full =  Contact Schedule
 Remaining = Remaining
 for = for
 to = to
@@ -58,6 +76,12 @@ OVERLAP = OVERLAP WARNING
 Current = Current selection either conflicts with established business hours or overlaps existing appointments. Please Try Again.
 Upcoming = Upcoming Appointment
 AppointmentNotification = Appointment Notification
+DeleteApptQ = Are you sure you wish to delete this appointment?
+DelWarn = Delete Warning
+DelConfirm = Delete Confirmation
+DelAppt = Deleting Appointment
+ApptDel = Appointment Deleted
+ApptDelResults = THE FOLLOWING APPOINTMENT HAS BEEN DELETED!
 You = You have an upcoming appointment with the following criteria:
 There = There are no upcoming appointments at this time.
 CurrentDay = Current Day
@@ -68,3 +92,21 @@ Wednesday = Wednesday
 Thursday = Thursday
 Friday = Friday
 Saturday = Saturday
+apptTotalTitle = Appt. Totals.
+apptRemTitle = Remaining Appointments
+remTitle = Remaining Appointments for  : 
+remStatus1 = There are no remaining appointments available.
+remStatus2 = Available bookings will display at 8:00 a.m.
+remFifteen = Remaining 15 mins Appointments:
+remThirty = Remaining 30 mins Appointments:
+remFortyFive = Remaining 45 mins Appointments:
+remSixty = Remaining 60 mins Appointments:
+backtoMain = Back to Main Menu
+custAdded = New Customer Added!
+addedCust1 = CUSTOMER ADDED
+addedCust2 = has been added to the list of customers!
+custUpdated = Customer Updated!
+updatedCust1 = CUSTOMER UPDATE
+updatedCust2 = The following customer has been updated successfully!
+VALUE = VALUE WARNING
+valwarn = "The values entered render invalid. Please Try Again."
