--- a/src/main/resources/rb/Nat_fr.properties
+++ b/src/main/resources/rb/Nat_fr.properties
@@ -10,44 +10,64 @@ Login =   Erreur D'Identification
 LoginForm = Formulaire de Connexion
 Invalid = Des informations d'identification non valides ont été saisies. Veuillez réessayer.
 MM/dd/yyyy = dd/MM/yyyy
-Contact = Contact
+Contact = Le Contact
 ID = ID
 User = Utilisateur
-Appointments = Rendez-vous
+UserID = ID de L'utilisateur
+
+Appointments = Les Rendez-Vous
 APPOINTMENTS = Rendez-vous
 APPOINTMENT = Rendez-vous
 Appointment = Rendez-vous
-Customers = Clients
-CUSTOMERS = Clients
+AppointmentID = ID de Rendez-Vous
+AppointmentType = Type de Rendez-vous
+APPOINTMENTID = ID# de Rendez-Vous :
+ApptID = ID de R.v.
+APPOINTMENT_TITLE = Titre de Rendez-Vous :
+Customers = Les Clients
+CUSTOMERS = Les Clients
 Customer = Client
-Reports = Rapports
+CustomerID = N ° de client
+CustomerName = Nom du Client
+Reports = Les Rapports
 Back  = Retourner
 BACK = Retourner
-Appt = Appt
+Appt = R.v.
 Title = Le Titre
 Description = La Description
-Location = Emplacement
+Location = L'emplacement
 Type = Le Type
 Start = Le Début
 End = La Fin
 ADD = Ajouter
+Add = Ajouter
+addCust = Ajouter un Client
+modCust = Mettre à jour Le Client
+addAppt = Ajouter un Rendez-vous
+modAppt = Mettre à jour le Rendez-vous
+ApptModification = Modification de Rendez-vous
+Modify = Modifier
 UPDATE = Réviser
 DELETE = Effacer
 All = Tout
 Month = Le Mois
+
 Week = La Semaine
 Name = Nom
 Address = L'adresse
 Postal = Code Postal
 Phone = Téléphone
 Division = La Division
+DivisionID = ID de Division
+State = État/Province
 Countries = Des Pays
+Country = Le Pays
 Total = Le Total
-Months = Les Mes
-Totals = Les Totaux
-Select = sélectionner
-Full =  Ordre du jour du Contact
-Remaining = Le reste, restent
+Months = Les Mois :
+Totals = Les Totaux :
+contactSelect  = Sélectionner Le Contact :
+Full =  Horaire des Contacts
+Remaining = restent
 for = pour
 to = à
 Main = Menu Principal
@@ -56,9 +76,17 @@ No = Aucune sélection n'a été faite pour cette opération.
 DELETION = ERREUR DE SUPPRESSION
 Existing = Les rendez-vous clients existants doivent être supprimés avant de supprimer ce client.
 OVERLAP = AVERTISSEMENT DE CHEVAUCHEMENT
+VALUE = AVERTISSEMENT DE VALEUR
+valwarn = Les valeurs entrées sont invalides. Veuillez réessayer.
 Current = La sélection actuelle entre en conflit avec les heures d'ouverture établies ou chevauche les rendez-vous existants. Veuillez réessayer.
 Upcoming = Rendez-Vous à Venir
 AppointmentNotification = Avis de Rendez-Vous
+DeleteApptQ = Voulez-vous vraiment supprimer ce rendez-vou?
+DelWarn = Avertissement de Suppression
+DelConfirm = Confirmation de Suppression
+DelAppt = Suppression d'un Rendez-vous
+ApptDel = Rendez-vous supprimé
+ApptDelResults = Le rendez-vous suivant a été supprimé!
 You = Vous avez un rendez-vous à venir avec les critères suivants :
 There = Il n'y a pas de rendez-vous à venir pour le moment.
 CurrentDay = Aujourd'hui Est
@@ -69,3 +97,20 @@ Wednesday = Mercredi
 Thursday = Jeudi
 Friday = Vendredi
 Saturday = Samedi
+apptTotalTitle = Totaux des R.v.
+
+apptRemTitle = Rendez-vous Restants
+remTitle = Les rendez-vous qui restent pour  : 
+remStatus1 = Il ne reste aucun rendez-vous disponible
+remStatus2 = Les réservations disponibles s'afficheront après 8 h.
+remFifteen = Rendez-vous de 15 mins qui restent:
+remThirty = Rendez-vous de 30 mins qui restent:
+remFortyFive = Rendez-vous de 45 mins qui restent:
+remSixty = Rendez-vous de 60 mins qui restent:
+backtoMain =  Retour au Menu Principal
+custAdded = Un nouveau client a été ajouté!
+addedCust1 = CLIENT AJOUTÉ
+addedCust2 = a été ajouté à la liste des clients!
+custUpdated = Le client a été mis à jour!
+updatedCust1 = CLIENT MIS À JOUR
+updatedCust2 = Le client suivant a été mis à jour avec succès! :\n
