--- a/src/main/resources/rb/Nat_fr.properties
+++ b/src/main/resources/rb/Nat_fr.properties
@@ -87,6 +87,11 @@ DelConfirm = Confirmation de Suppression
 DelAppt = Suppression d'un Rendez-vous
 ApptDel = Rendez-vous supprimé
 ApptDelResults = Le rendez-vous suivant a été supprimé!
+DelCust = Suppression d'un Client
+DeleteCustQ = Voulez-vous vraiment supprimer ce client?
+CustDelResults =   LE CLIENT SUIVANT A ÉTÉ SUPPRIMÉ!
+
+
 You = Vous avez un rendez-vous à venir avec les critères suivants :
 There = Il n'y a pas de rendez-vous à venir pour le moment.
 CurrentDay = Aujourd'hui Est
