--- a/src/main/resources/rb/Nat_en.properties
+++ b/src/main/resources/rb/Nat_en.properties
@@ -77,11 +77,15 @@ Current = Current selection either conflicts with established business hours or 
 Upcoming = Upcoming Appointment
 AppointmentNotification = Appointment Notification
 DeleteApptQ = Are you sure you wish to delete this appointment?
-DelWarn = Delete Warning
+DelWarn = DELETE WARNING
 DelConfirm = Delete Confirmation
 DelAppt = Deleting Appointment
+DelCust = Deleting Customer
+DeleteCustQ = Are you sure you wish to delete this customer?
+CustDelResults =  THE FOLLOWING CUSTOMER HAS BEEN DELETED! 
 ApptDel = Appointment Deleted
 ApptDelResults = THE FOLLOWING APPOINTMENT HAS BEEN DELETED!
+
 You = You have an upcoming appointment with the following criteria:
 There = There are no upcoming appointments at this time.
 CurrentDay = Current Day
