Updating Customer Appointment Modify

--- a/src/main/resources/rb/Nat_fr.properties
+++ b/src/main/resources/rb/Nat_fr.properties
@@ -90,8 +90,6 @@ ApptDelResults = Le rendez-vous suivant a été supprimé!
 DelCust = Suppression d'un Client
 DeleteCustQ = Voulez-vous vraiment supprimer ce client?
 CustDelResults =   LE CLIENT SUIVANT A ÉTÉ SUPPRIMÉ!
-
-
 You = Vous avez un rendez-vous à venir avec les critères suivants :
 There = Il n'y a pas de rendez-vous à venir pour le moment.
 CurrentDay = Aujourd'hui Est
@@ -119,3 +117,4 @@ addedCust2 = a été ajouté à la liste des clients!
 custUpdated = Le client a été mis à jour!
 updatedCust1 = CLIENT MIS À JOUR
 updatedCust2 = Le client suivant a été mis à jour avec succès! :\n
+Updatefor = Mettez à jour tout rendez-vous de votre choix pour :
