Final Commit for v3.0 !

--- a/src/main/resources/rb/Nat_en.properties
+++ b/src/main/resources/rb/Nat_en.properties
@@ -20,7 +20,7 @@ AppointmentID = Appointment ID
 AppointmentType = Appointment Type
 APPOINTMENTID = APPOINTMENT ID# :
 ApptID = Appt.ID
-APPOINTMENT_TITLE = APPOINTMENT TITLE:
+APPOINTMENT_TITLE = APPOINTMENT TITLE : 
 UserID = User ID
 Customers = Customers
 CUSTOMERS = CUSTOMERS
@@ -50,6 +50,7 @@ DELETE = DELETE
 All = All
 Month = Month
 Week = Week
+Date = Date
 Name = Name
 Address = Address
 Postal = Postal Code
@@ -85,6 +86,13 @@ DeleteCustQ = Are you sure you wish to delete this customer?
 CustDelResults =  THE FOLLOWING CUSTOMER HAS BEEN DELETED! 
 ApptDel = Appointment Deleted
 ApptDelResults = THE FOLLOWING APPOINTMENT HAS BEEN DELETED!
+newApptAdd = New Appointment Added!
+apptAdded1 = APPOINTMENT ADDED
+apptAdded2 = The appointment with the following criteria has been added : 
+
+curApptMod = Appointment Updated!
+apptUpdate1 = UPDATE CONFIRMATION
+apptUpdated2 = The appointment with the following criteria has been updated :
 
 You = You have an upcoming appointment with the following criteria:
 There = There are no upcoming appointments at this time.
