--- a/src/main/resources/rb/Nat_fr.properties
+++ b/src/main/resources/rb/Nat_fr.properties
@@ -1,5 +1,5 @@
 Nat_fr.properties;=
-Time =  Temps :
+Time =  L'heure :
 Username = Nom D'Utilisateur :
 Password = Mot De Passe :
 Confirm = Confirmer
@@ -19,7 +19,7 @@ Appointments = Les Rendez-Vous
 APPOINTMENTS = Rendez-vous
 APPOINTMENT = Rendez-vous
 Appointment = Rendez-vous
-AppointmentID = ID de Rendez-Vous
+AppointmentID = ID de Rendez-Vous 
 AppointmentType = Type de Rendez-vous
 APPOINTMENTID = ID# de Rendez-Vous :
 ApptID = ID de R.v.
@@ -45,6 +45,13 @@ addCust = Ajouter un Client
 modCust = Mettre à jour Le Client
 addAppt = Ajouter un Rendez-vous
 modAppt = Mettre à jour le Rendez-vous
+newApptAdd = Un nouveau rendez-vous a été ajouté !
+apptAdded1 = RENDEZ-VOUS AJOUTÉ
+apptAdded2 = Le rendez-vous avec les critères suivants a été ajouté :
+
+curApptMod = Le rendez-vous a été mis à jour !
+apptUpdate1 = CONFIRMATION DE LA MISE À JOUR
+apptUpdated2 = Le rendez-vous avec les critères suivants a été mis à jour :
 ApptModification = Modification de Rendez-vous
 Modify = Modifier
 UPDATE = Réviser
@@ -53,6 +60,7 @@ All = Tout
 Month = Le Mois
 
 Week = La Semaine
+Date = Date
 Name = Nom
 Address = L'adresse
 Postal = Code Postal
