--- a/src/main/resources/rb/Nat_en.properties
+++ b/src/main/resources/rb/Nat_en.properties
@@ -108,7 +108,7 @@ apptTotalTitle = Appt. Totals.
 apptRemTitle = Remaining Appointments
 remTitle = Remaining Appointments for  : 
 remStatus1 = There are no remaining appointments available.
-remStatus2 = Available bookings will display at 8:00 a.m.
+remStatus2 = Available bookings will start after 8:00 a.m.
 remFifteen = Remaining 15 mins Appointments:
 remThirty = Remaining 30 mins Appointments:
 remFortyFive = Remaining 45 mins Appointments:
