--- a/src/main/resources/rb/Nat_fr.properties
+++ b/src/main/resources/rb/Nat_fr.properties
@@ -112,7 +112,7 @@ apptTotalTitle = Totaux des R.v.
 
 apptRemTitle = Rendez-vous Restants
 remTitle = Les rendez-vous qui restent pour  : 
-remStatus1 = Il ne reste aucun rendez-vous disponible
+remStatus1 = Il n'y a plus de rendez-vous disponibles aujourd'hui.
 remStatus2 = Les réservations disponibles commenceront après 8h.
 remFifteen = Rendez-vous de 15 mins qui restent:
 remThirty = Rendez-vous de 30 mins qui restent:
