--- a/src/main/resources/rb/Nat_es.properties
+++ b/src/main/resources/rb/Nat_es.properties
@@ -1,9 +1,9 @@
 Time =  Time : 
-Username = Username :
-Password = Password :
+Username = Username
+Password = Password
 Confirm = Confirm
 Exit = Exit
-Proceed = Proceed to Login
+Proceed = Proceed to Log in
 Error =   Error
 Login =   Login Error
 LoginForm = Login Form
@@ -17,10 +17,10 @@ APPOINTMENTS = APPOINTMENTS
 APPOINTMENT = APPOINTMENT
 Appointment = Appointment 
 AppointmentID = Appointment ID
+ApptID = Appt.ID
 AppointmentType = Appointment Type
 APPOINTMENTID = APPOINTMENT ID# :
-ApptID = Appt.ID
-APPOINTMENT_TITLE = APPOINTMENT TITLE : 
+APPOINTMENT_TITLE = APPOINTMENT TITLE:
 UserID = User ID
 Customers = Customers
 CUSTOMERS = CUSTOMERS
@@ -30,6 +30,8 @@ CustomerName = Customer Name
 Reports = Reports
 Back  = Back
 BACK = BACK
+ApptModification = Modify Appointment
+Modify = Modify
 Appt = Appt
 Title = Title
 Description = Description
@@ -39,23 +41,29 @@ Start = Start
 End = End
 ADD = ADD
 Add = Add
-ApptModification = Modify Appointment
+UPDATE = UPDATE
+DELETE = DELETE
+
 addCust = ADD CUSTOMER
 modCust = UPDATE CUSTOMER
 addAppt = ADD APPOINTMENT
 modAppt = UPDATE APPOINTMENT
-Modify = Modify
-UPDATE = UPDATE
-DELETE = DELETE
+newApptAdd = New Appointment Added!
+apptAdded1 = APPOINTMENT ADDED
+apptAdded2 = The appointment with the following criteria has been added : 
+
+curApptMod = Appointment Updated!
+apptUpdate1 = UPDATE CONFIRMATION
+apptUpdated2 = The appointment with the following criteria has been updated :
 All = All
 Month = Month
 Week = Week
-Date = Date
 Name = Name
+Date = Date
 Address = Address
 Postal = Postal Code
 Phone = Phone
-Division = Division
+Division = Division 
 DivisionID = Division ID
 Countries = Countries
 Country = Country
@@ -78,28 +86,27 @@ Current = Current selection either conflicts with established business hours or 
 Upcoming = Upcoming Appointment
 AppointmentNotification = Appointment Notification
 DeleteApptQ = Are you sure you wish to delete this appointment?
-DelWarn = DELETE WARNING
+DelWarn = Delete Warning
 DelConfirm = Delete Confirmation
 DelAppt = Deleting Appointment
+ApptDel = Appointment Deleted
+ApptDelResults = THE FOLLOWING APPOINTMENT HAS BEEN DELETED!
 DelCust = Deleting Customer
 DeleteCustQ = Are you sure you wish to delete this customer?
 CustDelResults =  THE FOLLOWING CUSTOMER HAS BEEN DELETED! 
-ApptDel = Appointment Deleted
-ApptDelResults = THE FOLLOWING APPOINTMENT HAS BEEN DELETED!
-newApptAdd = New Appointment Added!
-apptAdded1 = APPOINTMENT ADDED
-apptAdded2 = The appointment with the following criteria has been added : 
-
-curApptMod = Appointment Updated!
-apptUpdate1 = UPDATE CONFIRMATION
-apptUpdated2 = The appointment with the following criteria has been updated :
-
 You = You have an upcoming appointment with the following criteria:
 There = There are no upcoming appointments at this time.
 CurrentDay = Current Day
-apptTotalTitle = Appt. Totals.
+Sunday = Sunday
+Monday = Monday
+Tuesday = Tuesday
+Wednesday = Wednesday
+Thursday = Thursday
+Friday = Friday
+Saturday = Saturday
+apptTotalTitle = Appt. Totals
 apptRemTitle = Remaining Appointments
-remTitle = Remaining Appointments for  :  
+remTitle = Remaining Appointments for  :
 remStatus1 = There are no remaining appointments available today.
 remStatus2 = Available bookings will start after 8:00 a.m.
 remFifteen = Remaining 15 mins Appointments:
